// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketIntegrations /> should render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TicketIntegrationsPresenter
    fetchTicketIntegrations={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "seasonId": undefined,
            },
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    loading={false}
    ticketIntegrations={
      Array [
        Object {
          "id": 1,
          "isActive": true,
          "logoUrl": "#",
          "name": "Some Name",
          "sold": 1000,
          "total": 1000,
        },
        Object {
          "id": 2,
          "isActive": true,
          "logoUrl": "#",
          "name": "Some Name",
          "sold": 1000,
          "total": 1000,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <PanelHeader>
          <Flex
            align="center"
            height="100%"
          >
            <styled.h4>
              Ticket Integrations
            </styled.h4>
          </Flex>
        </PanelHeader>,
        <styled.section>
          <styled.div>
            <TicketIntegrationListItem
              integration={
                Object {
                  "id": 1,
                  "isActive": true,
                  "logoUrl": "#",
                  "name": "Some Name",
                  "sold": 1000,
                  "total": 1000,
                }
              }
              integrations={
                Array [
                  Object {
                    "id": 1,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  },
                  Object {
                    "id": 2,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  },
                ]
              }
            />
            <TicketIntegrationListItem
              integration={
                Object {
                  "id": 2,
                  "isActive": true,
                  "logoUrl": "#",
                  "name": "Some Name",
                  "sold": 1000,
                  "total": 1000,
                }
              }
              integrations={
                Array [
                  Object {
                    "id": 1,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  },
                  Object {
                    "id": 2,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  },
                ]
              }
            />
          </styled.div>
        </styled.section>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Flex
            align="center"
            height="100%"
          >
            <styled.h4>
              Ticket Integrations
            </styled.h4>
          </Flex>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "align": "center",
            "children": <styled.h4>
              Ticket Integrations
            </styled.h4>,
            "height": "100%",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Ticket Integrations",
            },
            "ref": null,
            "rendered": "Ticket Integrations",
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <styled.div>
            <TicketIntegrationListItem
              integration={
                Object {
                  "id": 1,
                  "isActive": true,
                  "logoUrl": "#",
                  "name": "Some Name",
                  "sold": 1000,
                  "total": 1000,
                }
              }
              integrations={
                Array [
                  Object {
                    "id": 1,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  },
                  Object {
                    "id": 2,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  },
                ]
              }
            />
            <TicketIntegrationListItem
              integration={
                Object {
                  "id": 2,
                  "isActive": true,
                  "logoUrl": "#",
                  "name": "Some Name",
                  "sold": 1000,
                  "total": 1000,
                }
              }
              integrations={
                Array [
                  Object {
                    "id": 1,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  },
                  Object {
                    "id": 2,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  },
                ]
              }
            />
          </styled.div>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <TicketIntegrationListItem
                integration={
                  Object {
                    "id": 1,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  }
                }
                integrations={
                  Array [
                    Object {
                      "id": 1,
                      "isActive": true,
                      "logoUrl": "#",
                      "name": "Some Name",
                      "sold": 1000,
                      "total": 1000,
                    },
                    Object {
                      "id": 2,
                      "isActive": true,
                      "logoUrl": "#",
                      "name": "Some Name",
                      "sold": 1000,
                      "total": 1000,
                    },
                  ]
                }
              />,
              <TicketIntegrationListItem
                integration={
                  Object {
                    "id": 2,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  }
                }
                integrations={
                  Array [
                    Object {
                      "id": 1,
                      "isActive": true,
                      "logoUrl": "#",
                      "name": "Some Name",
                      "sold": 1000,
                      "total": 1000,
                    },
                    Object {
                      "id": 2,
                      "isActive": true,
                      "logoUrl": "#",
                      "name": "Some Name",
                      "sold": 1000,
                      "total": 1000,
                    },
                  ]
                }
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "function",
              "props": Object {
                "integration": Object {
                  "id": 1,
                  "isActive": true,
                  "logoUrl": "#",
                  "name": "Some Name",
                  "sold": 1000,
                  "total": 1000,
                },
                "integrations": Array [
                  Object {
                    "id": 1,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  },
                  Object {
                    "id": 2,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "function",
              "props": Object {
                "integration": Object {
                  "id": 2,
                  "isActive": true,
                  "logoUrl": "#",
                  "name": "Some Name",
                  "sold": 1000,
                  "total": 1000,
                },
                "integrations": Array [
                  Object {
                    "id": 1,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  },
                  Object {
                    "id": 2,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <PanelHeader>
            <Flex
              align="center"
              height="100%"
            >
              <styled.h4>
                Ticket Integrations
              </styled.h4>
            </Flex>
          </PanelHeader>,
          <styled.section>
            <styled.div>
              <TicketIntegrationListItem
                integration={
                  Object {
                    "id": 1,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  }
                }
                integrations={
                  Array [
                    Object {
                      "id": 1,
                      "isActive": true,
                      "logoUrl": "#",
                      "name": "Some Name",
                      "sold": 1000,
                      "total": 1000,
                    },
                    Object {
                      "id": 2,
                      "isActive": true,
                      "logoUrl": "#",
                      "name": "Some Name",
                      "sold": 1000,
                      "total": 1000,
                    },
                  ]
                }
              />
              <TicketIntegrationListItem
                integration={
                  Object {
                    "id": 2,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  }
                }
                integrations={
                  Array [
                    Object {
                      "id": 1,
                      "isActive": true,
                      "logoUrl": "#",
                      "name": "Some Name",
                      "sold": 1000,
                      "total": 1000,
                    },
                    Object {
                      "id": 2,
                      "isActive": true,
                      "logoUrl": "#",
                      "name": "Some Name",
                      "sold": 1000,
                      "total": 1000,
                    },
                  ]
                }
              />
            </styled.div>
          </styled.section>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Flex
              align="center"
              height="100%"
            >
              <styled.h4>
                Ticket Integrations
              </styled.h4>
            </Flex>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "align": "center",
              "children": <styled.h4>
                Ticket Integrations
              </styled.h4>,
              "height": "100%",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Ticket Integrations",
              },
              "ref": null,
              "rendered": "Ticket Integrations",
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <styled.div>
              <TicketIntegrationListItem
                integration={
                  Object {
                    "id": 1,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  }
                }
                integrations={
                  Array [
                    Object {
                      "id": 1,
                      "isActive": true,
                      "logoUrl": "#",
                      "name": "Some Name",
                      "sold": 1000,
                      "total": 1000,
                    },
                    Object {
                      "id": 2,
                      "isActive": true,
                      "logoUrl": "#",
                      "name": "Some Name",
                      "sold": 1000,
                      "total": 1000,
                    },
                  ]
                }
              />
              <TicketIntegrationListItem
                integration={
                  Object {
                    "id": 2,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  }
                }
                integrations={
                  Array [
                    Object {
                      "id": 1,
                      "isActive": true,
                      "logoUrl": "#",
                      "name": "Some Name",
                      "sold": 1000,
                      "total": 1000,
                    },
                    Object {
                      "id": 2,
                      "isActive": true,
                      "logoUrl": "#",
                      "name": "Some Name",
                      "sold": 1000,
                      "total": 1000,
                    },
                  ]
                }
              />
            </styled.div>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <TicketIntegrationListItem
                  integration={
                    Object {
                      "id": 1,
                      "isActive": true,
                      "logoUrl": "#",
                      "name": "Some Name",
                      "sold": 1000,
                      "total": 1000,
                    }
                  }
                  integrations={
                    Array [
                      Object {
                        "id": 1,
                        "isActive": true,
                        "logoUrl": "#",
                        "name": "Some Name",
                        "sold": 1000,
                        "total": 1000,
                      },
                      Object {
                        "id": 2,
                        "isActive": true,
                        "logoUrl": "#",
                        "name": "Some Name",
                        "sold": 1000,
                        "total": 1000,
                      },
                    ]
                  }
                />,
                <TicketIntegrationListItem
                  integration={
                    Object {
                      "id": 2,
                      "isActive": true,
                      "logoUrl": "#",
                      "name": "Some Name",
                      "sold": 1000,
                      "total": 1000,
                    }
                  }
                  integrations={
                    Array [
                      Object {
                        "id": 1,
                        "isActive": true,
                        "logoUrl": "#",
                        "name": "Some Name",
                        "sold": 1000,
                        "total": 1000,
                      },
                      Object {
                        "id": 2,
                        "isActive": true,
                        "logoUrl": "#",
                        "name": "Some Name",
                        "sold": 1000,
                        "total": 1000,
                      },
                    ]
                  }
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "function",
                "props": Object {
                  "integration": Object {
                    "id": 1,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  },
                  "integrations": Array [
                    Object {
                      "id": 1,
                      "isActive": true,
                      "logoUrl": "#",
                      "name": "Some Name",
                      "sold": 1000,
                      "total": 1000,
                    },
                    Object {
                      "id": 2,
                      "isActive": true,
                      "logoUrl": "#",
                      "name": "Some Name",
                      "sold": 1000,
                      "total": 1000,
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "2",
                "nodeType": "function",
                "props": Object {
                  "integration": Object {
                    "id": 2,
                    "isActive": true,
                    "logoUrl": "#",
                    "name": "Some Name",
                    "sold": 1000,
                    "total": 1000,
                  },
                  "integrations": Array [
                    Object {
                      "id": 1,
                      "isActive": true,
                      "logoUrl": "#",
                      "name": "Some Name",
                      "sold": 1000,
                      "total": 1000,
                    },
                    Object {
                      "id": 2,
                      "isActive": true,
                      "logoUrl": "#",
                      "name": "Some Name",
                      "sold": 1000,
                      "total": 1000,
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`<TicketIntegrations /> should render correctly when an error occurs 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TicketIntegrationsPresenter
    error="Error"
    fetchTicketIntegrations={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "seasonId": undefined,
            },
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    loading={false}
    ticketIntegrations={
      Array [
        Object {
          "id": 1,
          "isActive": true,
          "logoUrl": "#",
          "name": "Some Name",
          "sold": 1000,
          "total": 1000,
        },
        Object {
          "id": 2,
          "isActive": true,
          "logoUrl": "#",
          "name": "Some Name",
          "sold": 1000,
          "total": 1000,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <PanelHeader>
          <Flex
            align="center"
            height="100%"
          >
            <styled.h4>
              Ticket Integrations
            </styled.h4>
          </Flex>
        </PanelHeader>,
        <styled.section>
          <RenderError />
        </styled.section>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Flex
            align="center"
            height="100%"
          >
            <styled.h4>
              Ticket Integrations
            </styled.h4>
          </Flex>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "align": "center",
            "children": <styled.h4>
              Ticket Integrations
            </styled.h4>,
            "height": "100%",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Ticket Integrations",
            },
            "ref": null,
            "rendered": "Ticket Integrations",
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <RenderError />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <PanelHeader>
            <Flex
              align="center"
              height="100%"
            >
              <styled.h4>
                Ticket Integrations
              </styled.h4>
            </Flex>
          </PanelHeader>,
          <styled.section>
            <RenderError />
          </styled.section>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Flex
              align="center"
              height="100%"
            >
              <styled.h4>
                Ticket Integrations
              </styled.h4>
            </Flex>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "align": "center",
              "children": <styled.h4>
                Ticket Integrations
              </styled.h4>,
              "height": "100%",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Ticket Integrations",
              },
              "ref": null,
              "rendered": "Ticket Integrations",
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <RenderError />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`<TicketIntegrations /> should render correctly when loading is true 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TicketIntegrationsPresenter
    fetchTicketIntegrations={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "seasonId": undefined,
            },
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    loading={true}
    ticketIntegrations={
      Array [
        Object {
          "id": 1,
          "isActive": true,
          "logoUrl": "#",
          "name": "Some Name",
          "sold": 1000,
          "total": 1000,
        },
        Object {
          "id": 2,
          "isActive": true,
          "logoUrl": "#",
          "name": "Some Name",
          "sold": 1000,
          "total": 1000,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <PanelHeader>
          <Flex
            align="center"
            height="100%"
          >
            <styled.h4>
              Ticket Integrations
            </styled.h4>
          </Flex>
        </PanelHeader>,
        <styled.section>
          <Loader />
        </styled.section>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Flex
            align="center"
            height="100%"
          >
            <styled.h4>
              Ticket Integrations
            </styled.h4>
          </Flex>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "align": "center",
            "children": <styled.h4>
              Ticket Integrations
            </styled.h4>,
            "height": "100%",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Ticket Integrations",
            },
            "ref": null,
            "rendered": "Ticket Integrations",
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Loader />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <PanelHeader>
            <Flex
              align="center"
              height="100%"
            >
              <styled.h4>
                Ticket Integrations
              </styled.h4>
            </Flex>
          </PanelHeader>,
          <styled.section>
            <Loader />
          </styled.section>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Flex
              align="center"
              height="100%"
            >
              <styled.h4>
                Ticket Integrations
              </styled.h4>
            </Flex>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "align": "center",
              "children": <styled.h4>
                Ticket Integrations
              </styled.h4>,
              "height": "100%",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Ticket Integrations",
              },
              "ref": null,
              "rendered": "Ticket Integrations",
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Loader />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`<TicketIntegrations /> should render correctly when no data is found 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TicketIntegrationsPresenter
    fetchTicketIntegrations={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "seasonId": undefined,
            },
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    loading={false}
    ticketIntegrations={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <PanelHeader>
          <Flex
            align="center"
            height="100%"
          >
            <styled.h4>
              Ticket Integrations
            </styled.h4>
          </Flex>
        </PanelHeader>,
        <styled.section>
          <NoData />
        </styled.section>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Flex
            align="center"
            height="100%"
          >
            <styled.h4>
              Ticket Integrations
            </styled.h4>
          </Flex>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "align": "center",
            "children": <styled.h4>
              Ticket Integrations
            </styled.h4>,
            "height": "100%",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Ticket Integrations",
            },
            "ref": null,
            "rendered": "Ticket Integrations",
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NoData />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <PanelHeader>
            <Flex
              align="center"
              height="100%"
            >
              <styled.h4>
                Ticket Integrations
              </styled.h4>
            </Flex>
          </PanelHeader>,
          <styled.section>
            <NoData />
          </styled.section>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Flex
              align="center"
              height="100%"
            >
              <styled.h4>
                Ticket Integrations
              </styled.h4>
            </Flex>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "align": "center",
              "children": <styled.h4>
                Ticket Integrations
              </styled.h4>,
              "height": "100%",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Ticket Integrations",
              },
              "ref": null,
              "rendered": "Ticket Integrations",
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NoData />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
